wwr/styles/rafting.css
@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");

* {
  box-sizing: border-box;
}

:root {
  --primary-color: #3ba100;
  --secondary-color: #2ae4eb;
  --accent1-color: #6bfaff;
  --accent2-color: #fbffbd;
  --heading-font: "Permanent Marker", serif;
  --paragraph-font: Arial, serif;

  --nav-background-color: #0084ff;
  --nav-link-color: #ffffff;
  --nav-hover-link-color: #000000;
  --nav-hover-background-color: #75eaff;
}

nav {
  background-color: var(--nav-background-color);
}

body {
  font-family: var(--paragraph-font);
  max-width: 960px;
  padding: 20px;
  margin: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font);
  color: var(--primary-color);
}

header {
  padding: 20px;
  background-color: var(--accent1-color);
  display: grid;
  grid-template-columns: 100px 1fr;
}
header img {
  grid-column: 1/2;
  width: 100%;
  height: 100%;
}
header nav {
  grid-column: 2/3;
  border-radius: 10px;
  height: 100%;
  margin: auto;
  width: 90%;
}

p {
  padding: 25px;
}

nav {
  background-color: var(--nav-background-color);
  font-size: 1.2rem;
  padding: 5px;
  display: flex;
  flex-direction: column;
  height: fit-content;
}

nav a {
  display: block;
  color: var(--nav-link-color);
  text-decoration: none;
  padding: 0.5rem;
  height: 90%;
  margin: auto 1rem;
  /* border:1px solid black; */
  border-radius: 10px;
}

nav a:link,
nav a:visited {
  color: var(--nav-link-color);
}

nav a:hover {
  color: var(--nav-hover-link-color);
  background-color: var(--nav-hover-background-color);
}

.hero {
  position: relative;
  width: 100%;
  aspect-ratio: 3/2;
  /* height:30rem; */
}

.hero img {
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
}

h1 {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.74);
  text-align: center;
  top: 1rem;
  width: 100%;
}

article {
  position: absolute;
  width: 90%;
  background-color: rgba(192, 192, 192, 0.507);
  top: 8rem;
  left: 5%;
}

.hero article img {
  position: relative;
  width: 200px;
  float: right;
  height: auto;
}

.hero section {
  position: relative;
}

main {
  position: relative;
}

footer > a {
  position: relative;
  text-decoration: none;
}
footer {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.adv {
  max-width: 960px;
  display: grid;
  grid-template-rows: 60px 1fr;
  grid-template-columns: repeat(5, 1fr);
}
.adv h2 {
  grid-row: 1/2;
  grid-column: 1/6;
  text-align: center;
}
.adv figure {
  width: 100%;
  margin: 0;
  padding: 0 5px;
  display: grid;
  grid-template-rows: 1fr 60px;
}
.adv figure img {
  width: 100%;
  /* height:100%; */
  margin: auto;
  grid-row: 1/2;
  border-radius: 5px;
}
.adv figcaption {
  grid-row: 2/3;
}

#contact {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
  margin: auto;
}

#contactInformation {
  background-color: #3ba100;
  color: rgb(255, 255, 255);
  font-weight: bold;
  padding: 0.5rem;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  height: 100%;
}

#contactInformation div p {
  padding: 0px;
  margin: 0px;
}

#images {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}
#images img {
  width: 100%;
  padding: 0.1rem;
}

iframe {
  height: 15em;
  width: 100%;
  padding: 0.5rem 0;
  order: 4;
}

form {
  height: 100%;
  width: 100%;
  margin: auto;
  background-color: var(--accent2-color);
  padding: 0.5rem;
  border-radius: 1rem;
  grid-column: 1/2;
  grid-row: 1/2;
  display: flex;
  flex-direction: column;
}

fieldset {
  padding: 0.5rem;
  margin: 1rem 0;
  display: flex;
  flex-direction: column;
}
form button {
  width: 80%;
  margin: auto;
  font-size: 1.1em;
  background-color: #6bfaff;
  border:none;
  border-radius: 1em;
  color:black;
}
#purposeField {
  display: flex;
}
#purpose {
  display: flex;
  flex-direction: column;
}

textarea {
  height: 10em;
  font-size: 0.8em;
}
legend {
  padding: 0.5em;
  margin: 0;
  width: fit-content;
}
input:not([type="radio"]) {
  height: 3em;
  padding: 5px;
}

#images figure{
  width:100%;
  padding:0;
  margin:0;
  font-size:1em;
  font-weight: 100;
}

#contactInfo label{
  margin:0.5em auto;

}
#contact h1{
  position:relative;
  width:100%;
  padding:0;
  margin:0;
  margin-bottom:1em;
  height:75%;
  text-align: center;
}
@media only screen and (min-width: 710px) {
  #contact {
    display: grid;
    grid-template-columns: 50% 1fr;
    grid-template-rows: 4em 1fr;
    flex-direction: row;
    row-gap:10px;
    column-gap: 1em;
    padding: 0.5em;
  }
  #contact h1{ 
    grid-row:1/2;
    grid-column:1/3;
  }

  form{
    max-width:450px;
    grid-column: 2/3;
    grid-row:2/3;
  }
  header nav {
    flex-direction: row;
    height: 60%;
  }

  #contactInformation {
    margin-bottom: 0;
  }
  #purpose {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }
  #purposeField {
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 10em;
  }
  textarea {
    height: 100%;
  }
  #contactInfo {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }
  #contactInfo label {
    display: flex;
    flex-direction: row;
  }
}

